<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_favorite_24"
            />

        <item
            android:id="@+id/trending"
            android:title="@string/trending"
            android:icon="@drawable/ic_baseline_favorite_24"/>

        <item
            android:id="@+id/subscription"
            android:title="@string/subscription"
            android:icon="@drawable/ic_baseline_favorite_24"/>

    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/inbox"
                android:title="@string/inbox" />

            <item
                android:id="@+id/library"
                android:title="@string/library"/>
        </menu>
    </item>
</menu>